--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 <app-star-wars-weather></app-star-wars-weather>
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
